# typetest

./: .gitignore  Cargo.toml  LICENSE  README.md
core/: Cargo.toml  README.md
core/src/: lib.rs  stats.rs  word_generators.rs  word_pools.rs
core/src/word_gen/: random.rs
core/src/word_generators/: random.rs
core/src/word_pool/: default.rs
core/src/word_pools/: default_english.rs
gui/: Cargo.toml
gui/src/: main.rs  views.rs  widgets.rs
gui/src/views/: results.rs  settings.rs  typing_test.rs
gui/src/views/settings/: global.rs  random_generator.rs
gui/src/widgets/: word_submission.rs
iced/: Cargo.toml
iced/src/: main.rs  theme.rs  widgets.rs
iced/src/theme/: default_dark.rs
iced/src/widgets/: settings.rs  typing_test.rs
iced/src/widgets/settings/: global.rs  random_generator.rs
iced_themes/: Cargo.toml
iced_themes/src/: lib.rs  theme.rs  widgets.rs
iced_themes/src/theme/: default_dark.rs  default_light.rs
iced_themes/src/widgets/: displayed_word.rs
src/: app.rs  config.rs  fonts.rs  main.rs  views.rs
src/app/: controls.rs
src/app/controls/: circle.rs  test_input.rs
src/views/: settings.rs  typing_test.rs
src/views/settings/: global.rs  random_generator.rs
src/widgets/: editor.rs  word_submission.rs
themes/: Cargo.toml  README.md
themes/src/: lib.rs  themes.rs
themes/src/themes/: default_dark.rs  default_light.rs
typetest-core/: Cargo.toml
typetest-core/src/: lib.rs  stats.rs  word_gen.rs
typetest-core/src/word_gen/: random.rs
typetest-iced/: Cargo.toml
typetest-iced/src/: main.rs  theme.rs  widgets.rs  word_pool.rs
typetest-iced/src/theme/: default.rs  default_dark.rs  default_light.rs
typetest-iced/src/widgets/: results.rs  settings.rs  typing_test.rs
widgets/: Cargo.toml
widgets/src/: lib.rs  submission_wrapper.rs
