[package]
name = "typetest"
description = "An offline keyboard typing test."
repository = "https://github.com/Ace4896/typetest"
version = "1.1.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
typetest_core = { version = "1.0", path = "./core" }
typetest_widgets = { version = "1.1", path = "./widgets" }

iced = "0.9"
