[package]
name = "typetest"
description = "An offline keyboard typing test."
repository = "https://github.com/Ace4896/typetest"
version = "2.0.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
typetest_core = { version = "1.0", path = "./core" }

iced = { version = "0.10", features = ["advanced", "smol"] }
