[package]
name = "typetest"
version = "1.0.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2018"

[dependencies]
typetest_core = { path = "../core" }
typetest_themes = { path = "../themes" }

[dependencies.iced]
version = "0.3"
default-features = false
features = ["glow", "smol"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
iced_native = "0.4"
