[package]
name = "typetest_iced"
version = "1.0.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2018"
description = "An offline typing test, written using Iced."

[[bin]]
name = "typetest"
path = "src/main.rs"

[dependencies]
typetest_core = { path = "../core" }
typetest_iced_themes = { path = "../iced_themes" }

[dependencies.iced]
version = "0.3"
default-features = false
features = ["glow", "smol"]
