[package]
name = "typetest_themes"
description = "Crate containing themes for TypeTest."
version = "1.1.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
typetest_core = { version = "1.1", path = "../core" }

iced_core = { version = "0.9", features = ["palette"] }
iced_style = "0.8"
palette = "0.6"
