[package]
name = "typetest-iced"
version = "1.0.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2018"
description = "An offline typing test, written using Iced."

[dependencies]
typetest-core = { path = "../typetest-core" }

fastrand = "1.4"

# TODO: Use next version of Iced once available
[dependencies.iced]
git = "https://github.com/hecrj/iced"
rev = "8f081bad7756e16a4eb0ca4dcb1144fc47de5e9b"
default-features = false
features = ["async-std", "glow"]
