[package]
name = "typetest-iced"
version = "1.0.0"
authors = ["Jon Pacheco <jon.pacheco2@gmail.com>"]
edition = "2018"
description = "An offline typing test, written using Iced."

[dependencies]
typetest-core = { path = "../typetest-core" }

iced = { version = "0.2", default-features = false, features = ["async-std", "glow"] }
